Assignment 3/y.output
Terminals unused in grammar

    DO
    BREAK
    CHAR
    DOUBLE
    SWITCH
    CASE
    DEFAULT
    CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 $@1: ε

    7 $@2: ε

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list RPAREN $@2 compound_statement

    9 $@3: ε

   10 func_definition: type_specifier ID LPAREN RPAREN $@3 compound_statement

   11 parameter_list: parameter_list COMMA type_specifier ID
   12               | parameter_list COMMA type_specifier
   13               | type_specifier ID
   14               | type_specifier

   15 $@4: ε

   16 compound_statement: LCURL $@4 statements RCURL

   17 $@5: ε

   18 compound_statement: LCURL $@5 RCURL

   19 var_declaration: type_specifier declaration_list SEMICOLON

   20 type_specifier: INT
   21               | FLOAT
   22               | VOID

   23 declaration_list: declaration_list COMMA ID
   24                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   25                 | ID
   26                 | ID LTHIRD CONST_INT RTHIRD

   27 statements: statement
   28           | statements statement

   29 statement: var_declaration
   30          | expression_statement
   31          | compound_statement
   32          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   33          | IF LPAREN expression RPAREN statement
   34          | IF LPAREN expression RPAREN statement ELSE statement
   35          | WHILE LPAREN expression RPAREN statement
   36          | PRINTLN LPAREN ID RPAREN SEMICOLON
   37          | RETURN expression SEMICOLON

   38 expression_statement: SEMICOLON
   39                     | expression SEMICOLON

   40 variable: ID
   41         | ID LTHIRD expression RTHIRD

   42 expression: logic_expression
   43           | variable ASSIGNOP logic_expression

   44 logic_expression: rel_expression
   45                 | rel_expression LOGICOP rel_expression

   46 rel_expression: simple_expression
   47               | simple_expression RELOP simple_expression

   48 simple_expression: term
   49                  | simple_expression ADDOP term

   50 term: unary_expression
   51     | term MULOP unary_expression

   52 unary_expression: ADDOP unary_expression
   53                 | NOT unary_expression
   54                 | factor

   55 factor: variable
   56       | ID LPAREN argument_list RPAREN
   57       | LPAREN expression RPAREN
   58       | CONST_INT
   59       | CONST_FLOAT
   60       | variable INCOP
   61       | variable DECOP

   62 argument_list: arguments
   63              | ε

   64 arguments: arguments COMMA logic_expression
   65          | logic_expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 33 34
    ELSE (259) 34
    FOR (260) 32
    WHILE (261) 35
    DO (262)
    BREAK (263)
    INT (264) 20
    CHAR (265)
    FLOAT (266) 21
    DOUBLE (267)
    VOID (268) 22
    RETURN (269) 37
    SWITCH (270)
    CASE (271)
    DEFAULT (272)
    CONTINUE (273)
    PRINTLN (274) 36
    ADDOP (275) 49 52
    MULOP (276) 51
    INCOP (277) 60
    DECOP (278) 61
    RELOP (279) 47
    ASSIGNOP (280) 43
    LOGICOP (281) 45
    NOT (282) 53
    LPAREN (283) 8 10 32 33 34 35 36 56 57
    RPAREN (284) 8 10 32 33 34 35 36 56 57
    LCURL (285) 16 18
    RCURL (286) 16 18
    LTHIRD (287) 24 26 41
    RTHIRD (288) 24 26 41
    COMMA (289) 11 12 23 24 64
    SEMICOLON (290) 19 36 37 38 39
    CONST_INT (291) 24 26 58
    CONST_FLOAT (292) 59
    ID (293) 8 10 11 13 23 24 25 26 36 40 41 56
    LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    start (41)
        on left: 1
        on right: 0
    program (42)
        on left: 2 3
        on right: 1 2
    unit (43)
        on left: 4 5
        on right: 2 3
    func_definition (44)
        on left: 8 10
        on right: 5
    $@1 (45)
        on left: 6
        on right: 8
    $@2 (46)
        on left: 7
        on right: 8
    $@3 (47)
        on left: 9
        on right: 10
    parameter_list (48)
        on left: 11 12 13 14
        on right: 8 11 12
    compound_statement (49)
        on left: 16 18
        on right: 8 10 31
    $@4 (50)
        on left: 15
        on right: 16
    $@5 (51)
        on left: 17
        on right: 18
    var_declaration (52)
        on left: 19
        on right: 4 29
    type_specifier (53)
        on left: 20 21 22
        on right: 8 10 11 12 13 14 19
    declaration_list (54)
        on left: 23 24 25 26
        on right: 19 23 24
    statements (55)
        on left: 27 28
        on right: 16 28
    statement (56)
        on left: 29 30 31 32 33 34 35 36 37
        on right: 27 28 32 33 34 35
    expression_statement (57)
        on left: 38 39
        on right: 30 32
    variable (58)
        on left: 40 41
        on right: 43 55 60 61
    expression (59)
        on left: 42 43
        on right: 32 33 34 35 37 39 41 57
    logic_expression (60)
        on left: 44 45
        on right: 42 43 64 65
    rel_expression (61)
        on left: 46 47
        on right: 44 45
    simple_expression (62)
        on left: 48 49
        on right: 46 47 49
    term (63)
        on left: 50 51
        on right: 48 49 51
    unary_expression (64)
        on left: 52 53 54
        on right: 50 51 52 53
    factor (65)
        on left: 55 56 57 58 59 60 61
        on right: 54
    argument_list (66)
        on left: 62 63
        on right: 56
    arguments (67)
        on left: 64 65
        on right: 62 64


State 0

    0 $accept: • start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   20 type_specifier: INT •

    $default  reduce using rule 20 (type_specifier)


State 2

   21 type_specifier: FLOAT •

    $default  reduce using rule 21 (type_specifier)


State 3

   22 type_specifier: VOID •

    $default  reduce using rule 22 (type_specifier)


State 4

    0 $accept: start • $end

    $end  shift, and go to state 10


State 5

    1 start: program •
    2 program: program • unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit •

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition •

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration •

    $default  reduce using rule 4 (unit)


State 9

    8 func_definition: type_specifier • ID LPAREN $@1 parameter_list RPAREN $@2 compound_statement
   10                | type_specifier • ID LPAREN RPAREN $@3 compound_statement
   19 var_declaration: type_specifier • declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end •

    $default  accept


State 11

    2 program: program unit •

    $default  reduce using rule 2 (program)


State 12

    8 func_definition: type_specifier ID • LPAREN $@1 parameter_list RPAREN $@2 compound_statement
   10                | type_specifier ID • LPAREN RPAREN $@3 compound_statement
   25 declaration_list: ID •
   26                 | ID • LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 25 (declaration_list)


State 13

   19 var_declaration: type_specifier declaration_list • SEMICOLON
   23 declaration_list: declaration_list • COMMA ID
   24                 | declaration_list • COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 16
    SEMICOLON  shift, and go to state 17


State 14

    8 func_definition: type_specifier ID LPAREN • $@1 parameter_list RPAREN $@2 compound_statement
   10                | type_specifier ID LPAREN • RPAREN $@3 compound_statement

    RPAREN  shift, and go to state 18

    $default  reduce using rule 6 ($@1)

    $@1  go to state 19


State 15

   26 declaration_list: ID LTHIRD • CONST_INT RTHIRD

    CONST_INT  shift, and go to state 20


State 16

   23 declaration_list: declaration_list COMMA • ID
   24                 | declaration_list COMMA • ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 21


State 17

   19 var_declaration: type_specifier declaration_list SEMICOLON •

    $default  reduce using rule 19 (var_declaration)


State 18

   10 func_definition: type_specifier ID LPAREN RPAREN • $@3 compound_statement

    $default  reduce using rule 9 ($@3)

    $@3  go to state 22


State 19

    8 func_definition: type_specifier ID LPAREN $@1 • parameter_list RPAREN $@2 compound_statement

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    parameter_list  go to state 23
    type_specifier  go to state 24


State 20

   26 declaration_list: ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 25


State 21

   23 declaration_list: declaration_list COMMA ID •
   24                 | declaration_list COMMA ID • LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 26

    $default  reduce using rule 23 (declaration_list)


State 22

   10 func_definition: type_specifier ID LPAREN RPAREN $@3 • compound_statement

    LCURL  shift, and go to state 27

    compound_statement  go to state 28


State 23

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list • RPAREN $@2 compound_statement
   11 parameter_list: parameter_list • COMMA type_specifier ID
   12               | parameter_list • COMMA type_specifier

    RPAREN  shift, and go to state 29
    COMMA   shift, and go to state 30


State 24

   13 parameter_list: type_specifier • ID
   14               | type_specifier •

    ID  shift, and go to state 31

    $default  reduce using rule 14 (parameter_list)


State 25

   26 declaration_list: ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 26 (declaration_list)


State 26

   24 declaration_list: declaration_list COMMA ID LTHIRD • CONST_INT RTHIRD

    CONST_INT  shift, and go to state 32


State 27

   16 compound_statement: LCURL • $@4 statements RCURL
   18                   | LCURL • $@5 RCURL

    RCURL     reduce using rule 17 ($@5)
    $default  reduce using rule 15 ($@4)

    $@4  go to state 33
    $@5  go to state 34


State 28

   10 func_definition: type_specifier ID LPAREN RPAREN $@3 compound_statement •

    $default  reduce using rule 10 (func_definition)


State 29

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list RPAREN • $@2 compound_statement

    $default  reduce using rule 7 ($@2)

    $@2  go to state 35


State 30

   11 parameter_list: parameter_list COMMA • type_specifier ID
   12               | parameter_list COMMA • type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 36


State 31

   13 parameter_list: type_specifier ID •

    $default  reduce using rule 13 (parameter_list)


State 32

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 37


State 33

   16 compound_statement: LCURL $@4 • statements RCURL

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    LCURL        shift, and go to state 27
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    compound_statement    go to state 50
    var_declaration       go to state 51
    type_specifier        go to state 52
    statements            go to state 53
    statement             go to state 54
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 34

   18 compound_statement: LCURL $@5 • RCURL

    RCURL  shift, and go to state 64


State 35

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list RPAREN $@2 • compound_statement

    LCURL  shift, and go to state 27

    compound_statement  go to state 65


State 36

   11 parameter_list: parameter_list COMMA type_specifier • ID
   12               | parameter_list COMMA type_specifier •

    ID  shift, and go to state 66

    $default  reduce using rule 12 (parameter_list)


State 37

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 24 (declaration_list)


State 38

   33 statement: IF • LPAREN expression RPAREN statement
   34          | IF • LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 67


State 39

   32 statement: FOR • LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 68


State 40

   35 statement: WHILE • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 69


State 41

   37 statement: RETURN • expression SEMICOLON

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 70
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 42

   36 statement: PRINTLN • LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 71


State 43

   52 unary_expression: ADDOP • unary_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable          go to state 72
    unary_expression  go to state 73
    factor            go to state 63


State 44

   53 unary_expression: NOT • unary_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable          go to state 72
    unary_expression  go to state 74
    factor            go to state 63


State 45

   57 factor: LPAREN • expression RPAREN

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 75
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 46

   38 expression_statement: SEMICOLON •

    $default  reduce using rule 38 (expression_statement)


State 47

   58 factor: CONST_INT •

    $default  reduce using rule 58 (factor)


State 48

   59 factor: CONST_FLOAT •

    $default  reduce using rule 59 (factor)


State 49

   40 variable: ID •
   41         | ID • LTHIRD expression RTHIRD
   56 factor: ID • LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 76
    LTHIRD  shift, and go to state 77

    $default  reduce using rule 40 (variable)


State 50

   31 statement: compound_statement •

    $default  reduce using rule 31 (statement)


State 51

   29 statement: var_declaration •

    $default  reduce using rule 29 (statement)


State 52

   19 var_declaration: type_specifier • declaration_list SEMICOLON

    ID  shift, and go to state 78

    declaration_list  go to state 13


State 53

   16 compound_statement: LCURL $@4 statements • RCURL
   28 statements: statements • statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    LCURL        shift, and go to state 27
    RCURL        shift, and go to state 79
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    compound_statement    go to state 50
    var_declaration       go to state 51
    type_specifier        go to state 52
    statement             go to state 80
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 54

   27 statements: statement •

    $default  reduce using rule 27 (statements)


State 55

   30 statement: expression_statement •

    $default  reduce using rule 30 (statement)


State 56

   43 expression: variable • ASSIGNOP logic_expression
   55 factor: variable •
   60       | variable • INCOP
   61       | variable • DECOP

    INCOP     shift, and go to state 81
    DECOP     shift, and go to state 82
    ASSIGNOP  shift, and go to state 83

    $default  reduce using rule 55 (factor)


State 57

   39 expression_statement: expression • SEMICOLON

    SEMICOLON  shift, and go to state 84


State 58

   42 expression: logic_expression •

    $default  reduce using rule 42 (expression)


State 59

   44 logic_expression: rel_expression •
   45                 | rel_expression • LOGICOP rel_expression

    LOGICOP  shift, and go to state 85

    $default  reduce using rule 44 (logic_expression)


State 60

   46 rel_expression: simple_expression •
   47               | simple_expression • RELOP simple_expression
   49 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 86
    RELOP  shift, and go to state 87

    $default  reduce using rule 46 (rel_expression)


State 61

   48 simple_expression: term •
   51 term: term • MULOP unary_expression

    MULOP  shift, and go to state 88

    $default  reduce using rule 48 (simple_expression)


State 62

   50 term: unary_expression •

    $default  reduce using rule 50 (term)


State 63

   54 unary_expression: factor •

    $default  reduce using rule 54 (unary_expression)


State 64

   18 compound_statement: LCURL $@5 RCURL •

    $default  reduce using rule 18 (compound_statement)


State 65

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list RPAREN $@2 compound_statement •

    $default  reduce using rule 8 (func_definition)


State 66

   11 parameter_list: parameter_list COMMA type_specifier ID •

    $default  reduce using rule 11 (parameter_list)


State 67

   33 statement: IF LPAREN • expression RPAREN statement
   34          | IF LPAREN • expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 89
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 68

   32 statement: FOR LPAREN • expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    expression_statement  go to state 90
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 69

   35 statement: WHILE LPAREN • expression RPAREN statement

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 91
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 70

   37 statement: RETURN expression • SEMICOLON

    SEMICOLON  shift, and go to state 92


State 71

   36 statement: PRINTLN LPAREN • ID RPAREN SEMICOLON

    ID  shift, and go to state 93


State 72

   55 factor: variable •
   60       | variable • INCOP
   61       | variable • DECOP

    INCOP  shift, and go to state 81
    DECOP  shift, and go to state 82

    $default  reduce using rule 55 (factor)


State 73

   52 unary_expression: ADDOP unary_expression •

    $default  reduce using rule 52 (unary_expression)


State 74

   53 unary_expression: NOT unary_expression •

    $default  reduce using rule 53 (unary_expression)


State 75

   57 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 94


State 76

   56 factor: ID LPAREN • argument_list RPAREN

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    $default  reduce using rule 63 (argument_list)

    variable           go to state 72
    logic_expression   go to state 95
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63
    argument_list      go to state 96
    arguments          go to state 97


State 77

   41 variable: ID LTHIRD • expression RTHIRD

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 98
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 78

   25 declaration_list: ID •
   26                 | ID • LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 15

    $default  reduce using rule 25 (declaration_list)


State 79

   16 compound_statement: LCURL $@4 statements RCURL •

    $default  reduce using rule 16 (compound_statement)


State 80

   28 statements: statements statement •

    $default  reduce using rule 28 (statements)


State 81

   60 factor: variable INCOP •

    $default  reduce using rule 60 (factor)


State 82

   61 factor: variable DECOP •

    $default  reduce using rule 61 (factor)


State 83

   43 expression: variable ASSIGNOP • logic_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 72
    logic_expression   go to state 99
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 84

   39 expression_statement: expression SEMICOLON •

    $default  reduce using rule 39 (expression_statement)


State 85

   45 logic_expression: rel_expression LOGICOP • rel_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 72
    rel_expression     go to state 100
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 86

   49 simple_expression: simple_expression ADDOP • term

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable          go to state 72
    term              go to state 101
    unary_expression  go to state 62
    factor            go to state 63


State 87

   47 rel_expression: simple_expression RELOP • simple_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 72
    simple_expression  go to state 102
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 88

   51 term: term MULOP • unary_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable          go to state 72
    unary_expression  go to state 103
    factor            go to state 63


State 89

   33 statement: IF LPAREN expression • RPAREN statement
   34          | IF LPAREN expression • RPAREN statement ELSE statement

    RPAREN  shift, and go to state 104


State 90

   32 statement: FOR LPAREN expression_statement • expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    expression_statement  go to state 105
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 91

   35 statement: WHILE LPAREN expression • RPAREN statement

    RPAREN  shift, and go to state 106


State 92

   37 statement: RETURN expression SEMICOLON •

    $default  reduce using rule 37 (statement)


State 93

   36 statement: PRINTLN LPAREN ID • RPAREN SEMICOLON

    RPAREN  shift, and go to state 107


State 94

   57 factor: LPAREN expression RPAREN •

    $default  reduce using rule 57 (factor)


State 95

   65 arguments: logic_expression •

    $default  reduce using rule 65 (arguments)


State 96

   56 factor: ID LPAREN argument_list • RPAREN

    RPAREN  shift, and go to state 108


State 97

   62 argument_list: arguments •
   64 arguments: arguments • COMMA logic_expression

    COMMA  shift, and go to state 109

    $default  reduce using rule 62 (argument_list)


State 98

   41 variable: ID LTHIRD expression • RTHIRD

    RTHIRD  shift, and go to state 110


State 99

   43 expression: variable ASSIGNOP logic_expression •

    $default  reduce using rule 43 (expression)


State 100

   45 logic_expression: rel_expression LOGICOP rel_expression •

    $default  reduce using rule 45 (logic_expression)


State 101

   49 simple_expression: simple_expression ADDOP term •
   51 term: term • MULOP unary_expression

    MULOP  shift, and go to state 88

    $default  reduce using rule 49 (simple_expression)


State 102

   47 rel_expression: simple_expression RELOP simple_expression •
   49 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 86

    $default  reduce using rule 47 (rel_expression)


State 103

   51 term: term MULOP unary_expression •

    $default  reduce using rule 51 (term)


State 104

   33 statement: IF LPAREN expression RPAREN • statement
   34          | IF LPAREN expression RPAREN • statement ELSE statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    LCURL        shift, and go to state 27
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    compound_statement    go to state 50
    var_declaration       go to state 51
    type_specifier        go to state 52
    statement             go to state 111
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 105

   32 statement: FOR LPAREN expression_statement expression_statement • expression RPAREN statement

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 112
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 106

   35 statement: WHILE LPAREN expression RPAREN • statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    LCURL        shift, and go to state 27
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    compound_statement    go to state 50
    var_declaration       go to state 51
    type_specifier        go to state 52
    statement             go to state 113
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 107

   36 statement: PRINTLN LPAREN ID RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 114


State 108

   56 factor: ID LPAREN argument_list RPAREN •

    $default  reduce using rule 56 (factor)


State 109

   64 arguments: arguments COMMA • logic_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 72
    logic_expression   go to state 115
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 110

   41 variable: ID LTHIRD expression RTHIRD •

    $default  reduce using rule 41 (variable)


State 111

   33 statement: IF LPAREN expression RPAREN statement •
   34          | IF LPAREN expression RPAREN statement • ELSE statement

    ELSE  shift, and go to state 116

    $default  reduce using rule 33 (statement)


State 112

   32 statement: FOR LPAREN expression_statement expression_statement expression • RPAREN statement

    RPAREN  shift, and go to state 117


State 113

   35 statement: WHILE LPAREN expression RPAREN statement •

    $default  reduce using rule 35 (statement)


State 114

   36 statement: PRINTLN LPAREN ID RPAREN SEMICOLON •

    $default  reduce using rule 36 (statement)


State 115

   64 arguments: arguments COMMA logic_expression •

    $default  reduce using rule 64 (arguments)


State 116

   34 statement: IF LPAREN expression RPAREN statement ELSE • statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    LCURL        shift, and go to state 27
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    compound_statement    go to state 50
    var_declaration       go to state 51
    type_specifier        go to state 52
    statement             go to state 118
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 117

   32 statement: FOR LPAREN expression_statement expression_statement expression RPAREN • statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    LCURL        shift, and go to state 27
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    compound_statement    go to state 50
    var_declaration       go to state 51
    type_specifier        go to state 52
    statement             go to state 119
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 118

   34 statement: IF LPAREN expression RPAREN statement ELSE statement •

    $default  reduce using rule 34 (statement)


State 119

   32 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement •

    $default  reduce using rule 32 (statement)
